Fix margin and padding for ul and add gap

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -19,6 +19,9 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0px;
+  gap: 8px;
 }
 
 a {
